automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,12 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_values = ['Buenos Aires','Toronto','Pyeongchang']\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
@@ -383,9 +383,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [],
+         "type": "scatter",
+         "uid": "9f34a288-e3a1-11e8-9d73-0242ac110009",
+         "x": [],
+         "y": []
+        },
+        {
+         "text": [],
+         "type": "scatter",
+         "uid": "9f34a526-e3a1-11e8-9d73-0242ac110009",
+         "x": [],
+         "y": []
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"54d34dea-1a5a-490d-a6cd-51753633c9c5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"54d34dea-1a5a-490d-a6cd-51753633c9c5\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"9f3cfc80-e3a1-11e8-9d73-0242ac110009\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"9f3cff14-e3a1-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"54d34dea-1a5a-490d-a6cd-51753633c9c5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"54d34dea-1a5a-490d-a6cd-51753633c9c5\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"9f3cfc80-e3a1-11e8-9d73-0242ac110009\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"9f3cff14-e3a1-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
    ]
