--- a/index.ipynb
+++ b/index.ipynb
@@ -303,16 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'scatter'"
+       "'bar'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -336,17 +336,17 @@
           "Toronto",
           "Pyeongchang"
          ],
-         "type": "scatter",
-         "uid": "7413f9e6-e3a1-11e8-9d73-0242ac110009"
+         "type": "bar",
+         "uid": "d4ecdde6-e3a1-11e8-9d73-0242ac110009"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"bd788335-f8a4-4f63-9185-5d7f534d22ca\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bd788335-f8a4-4f63-9185-5d7f534d22ca\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"741a12b8-e3a1-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"44d1e6c7-22a8-4756-88ae-49a18824214f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"44d1e6c7-22a8-4756-88ae-49a18824214f\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"d4f11f8c-e3a1-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"bd788335-f8a4-4f63-9185-5d7f534d22ca\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bd788335-f8a4-4f63-9185-5d7f534d22ca\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"741a12b8-e3a1-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"44d1e6c7-22a8-4756-88ae-49a18824214f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"44d1e6c7-22a8-4756-88ae-49a18824214f\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"d4f11f8c-e3a1-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
