--- a/index.ipynb
+++ b/index.ipynb
@@ -297,8 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = ['Buenos Aires','Toronto','Pyeongchang']\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
+    "text_values = ['Buenos Aires','Toronto','Pyeongchang']\n"
    ]
   },
   {
