--- a/index.ipynb
+++ b/index.ipynb
@@ -293,11 +293,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "text_values = ['Buenos Aires','Toronto','Pyeongchang']\n"
+    "text_values = ['Buenos Aires','Toronto','Pyeongchang']\n",
+    "text_values\n"
    ]
   },
   {
