--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,8 @@
    ],
    "source": [
     "text_values = ['Buenos Aires','Toronto','Pyeongchang']\n",
-    "text_values\n"
+    "text_values\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
