--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,7 @@
    "source": [
     "text_values = ['Buenos Aires','Toronto','Pyeongchang']\n",
     "text_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar','x': 'text': text_values}"
    ]
   },
   {
