--- a/index.ipynb
+++ b/index.ipynb
@@ -388,6 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "y1_values = [cities[0]['A'], cities[1]['Population'], cities[2]['Population']]\n",
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
