--- a/index.ipynb
+++ b/index.ipynb
@@ -388,9 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y1_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
+    "y1_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n"
    ]
   },
   {
