--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y1_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n"
+    "y1_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
+    "\n"
    ]
   },
   {
