--- a/index.ipynb
+++ b/index.ipynb
@@ -389,8 +389,8 @@
    "outputs": [],
    "source": [
     "y1_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [y_values], 'text': []}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [y1_values], 'text': []}\n",
     "\n"
    ]
   },
