automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -404,27 +404,55 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
-         "type": "scatter",
-         "uid": "a1108a34-e3a3-11e8-9d73-0242ac110009",
-         "x": [],
-         "y": []
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "bar",
+         "uid": "c92fe25c-e3a4-11e8-9d73-0242ac110009",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           4758,
+           2731571,
+           3194
+          ]
+         ]
         },
         {
-         "text": [],
-         "type": "scatter",
-         "uid": "a1108dea-e3a3-11e8-9d73-0242ac110009",
-         "x": [],
-         "y": []
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "bar",
+         "uid": "c92fe680-e3a4-11e8-9d73-0242ac110009",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           2891000,
+           2800000,
+           2581000
+          ]
+         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"cfc492ed-6b2e-4a99-8daf-e6b680e4442a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cfc492ed-6b2e-4a99-8daf-e6b680e4442a\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"a11807aa-e3a3-11e8-9d73-0242ac110009\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"a1180b7e-e3a3-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"7e870de2-36cd-45fd-b941-979be65c7a14\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7e870de2-36cd-45fd-b941-979be65c7a14\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"c934f4fe-e3a4-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"c934f76a-e3a4-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"cfc492ed-6b2e-4a99-8daf-e6b680e4442a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cfc492ed-6b2e-4a99-8daf-e6b680e4442a\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"a11807aa-e3a3-11e8-9d73-0242ac110009\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"a1180b7e-e3a3-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"7e870de2-36cd-45fd-b941-979be65c7a14\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7e870de2-36cd-45fd-b941-979be65c7a14\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"c934f4fe-e3a4-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"c934f76a-e3a4-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
