automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -408,28 +408,7 @@
           "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "bar",
-         "uid": "c92fe25c-e3a4-11e8-9d73-0242ac110009",
-         "x": [
-          [
-           "Buenos Aires",
-           "Toronto",
-           "Pyeongchang"
-          ]
-         ],
-         "y": [
-          [
-           4758,
-           2731571,
-           3194
-          ]
-         ]
-        },
-        {
-         "text": [
-          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
-         ],
-         "type": "bar",
-         "uid": "c92fe680-e3a4-11e8-9d73-0242ac110009",
+         "uid": "016bccc6-e3a5-11e8-9d73-0242ac110009",
          "x": [
           [
            "Buenos Aires",
@@ -444,15 +423,36 @@
            2581000
           ]
          ]
+        },
+        {
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "bar",
+         "uid": "016bd252-e3a5-11e8-9d73-0242ac110009",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           4758,
+           2731571,
+           3194
+          ]
+         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"7e870de2-36cd-45fd-b941-979be65c7a14\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7e870de2-36cd-45fd-b941-979be65c7a14\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"c934f4fe-e3a4-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"c934f76a-e3a4-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"f34a4f2e-edd8-410f-895a-942518dea890\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f34a4f2e-edd8-410f-895a-942518dea890\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"017ce5a6-e3a5-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"017ce970-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"7e870de2-36cd-45fd-b941-979be65c7a14\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7e870de2-36cd-45fd-b941-979be65c7a14\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"c934f4fe-e3a4-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"c934f76a-e3a4-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"f34a4f2e-edd8-410f-895a-942518dea890\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f34a4f2e-edd8-410f-895a-942518dea890\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"017ce5a6-e3a5-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"017ce970-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
