--- a/index.ipynb
+++ b/index.ipynb
@@ -460,7 +460,7 @@
     }
    ],
    "source": [
-    "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
+    "plotly.offline.iplot([bar_trace_first_three_pops], [bar_trace_first_three_areas])"
    ]
   },
   {
