automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
           "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "bar",
-         "uid": "4077eb16-e3a5-11e8-9d73-0242ac110009",
+         "uid": "59a033c8-e3a5-11e8-9d73-0242ac110009",
          "x": [
           [
            "Buenos Aires",
@@ -423,36 +423,15 @@
            2581000
           ]
          ]
-        },
-        {
-         "text": [
-          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
-         ],
-         "type": "bar",
-         "uid": "4077f02a-e3a5-11e8-9d73-0242ac110009",
-         "x": [
-          [
-           "Buenos Aires",
-           "Toronto",
-           "Pyeongchang"
-          ]
-         ],
-         "y": [
-          [
-           4758,
-           2731571,
-           3194
-          ]
-         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"56f1f167-c8fe-42a4-a59b-86e8ca4962de\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"56f1f167-c8fe-42a4-a59b-86e8ca4962de\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"407cc294-e3a5-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"407cc528-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"9f9eccfb-c3d5-4a59-ad42-80c68a06130a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9f9eccfb-c3d5-4a59-ad42-80c68a06130a\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"59ae8c8e-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": [{\"type\": \"bar\", \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"56f1f167-c8fe-42a4-a59b-86e8ca4962de\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"56f1f167-c8fe-42a4-a59b-86e8ca4962de\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"407cc294-e3a5-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"407cc528-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"9f9eccfb-c3d5-4a59-ad42-80c68a06130a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9f9eccfb-c3d5-4a59-ad42-80c68a06130a\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"59ae8c8e-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": [{\"type\": \"bar\", \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
