--- a/index.ipynb
+++ b/index.ipynb
@@ -388,8 +388,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y1_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [y1_values], 'text': [text_values]}\n",
+    "y_values1 = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}\n",
     "\n"
    ]
