automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,19 +384,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_values1 = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [y_values1], 'text': [text_values]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
           "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "bar",
-         "uid": "59a033c8-e3a5-11e8-9d73-0242ac110009",
+         "uid": "9c946384-e3a5-11e8-9d73-0242ac110009",
          "x": [
           [
            "Buenos Aires",
@@ -428,10 +428,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"9f9eccfb-c3d5-4a59-ad42-80c68a06130a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9f9eccfb-c3d5-4a59-ad42-80c68a06130a\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"59ae8c8e-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": [{\"type\": \"bar\", \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"277c8b9d-7fed-4f6d-8fe9-17e71f4e1969\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"277c8b9d-7fed-4f6d-8fe9-17e71f4e1969\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"9c9a7292-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": [{\"type\": \"bar\", \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"9f9eccfb-c3d5-4a59-ad42-80c68a06130a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9f9eccfb-c3d5-4a59-ad42-80c68a06130a\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"59ae8c8e-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": [{\"type\": \"bar\", \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"277c8b9d-7fed-4f6d-8fe9-17e71f4e1969\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"277c8b9d-7fed-4f6d-8fe9-17e71f4e1969\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"9c9a7292-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": [{\"type\": \"bar\", \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
