automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
           "['Buenos Aires', 'Toronto', 'Pyeongchang']"
          ],
          "type": "bar",
-         "uid": "9c946384-e3a5-11e8-9d73-0242ac110009",
+         "uid": "c36d7a68-e3a5-11e8-9d73-0242ac110009",
          "x": [
           [
            "Buenos Aires",
@@ -423,15 +423,36 @@
            2581000
           ]
          ]
+        },
+        {
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "bar",
+         "uid": "c36d8102-e3a5-11e8-9d73-0242ac110009",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           4758,
+           2731571,
+           3194
+          ]
+         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"277c8b9d-7fed-4f6d-8fe9-17e71f4e1969\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"277c8b9d-7fed-4f6d-8fe9-17e71f4e1969\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"9c9a7292-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": [{\"type\": \"bar\", \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"10cbdb54-750c-4a6b-ae0b-536779c5f87e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"10cbdb54-750c-4a6b-ae0b-536779c5f87e\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"c37be594-e3a5-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"c37be814-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"277c8b9d-7fed-4f6d-8fe9-17e71f4e1969\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"277c8b9d-7fed-4f6d-8fe9-17e71f4e1969\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"9c9a7292-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": [{\"type\": \"bar\", \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"text\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]]}], \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"10cbdb54-750c-4a6b-ae0b-536779c5f87e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"10cbdb54-750c-4a6b-ae0b-536779c5f87e\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"c37be594-e3a5-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"c37be814-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -439,7 +460,7 @@
     }
    ],
    "source": [
-    "plotly.offline.iplot([bar_trace_first_three_pops], [bar_trace_first_three_areas])"
+    "plotly.offline.iplot([bar_trace_first_three_pops,bar_trace_first_three_areas])"
    ]
   },
   {
