--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,6 +394,15 @@
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [y_values1], 'text': [text_values]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_values1 = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]"
    ]
   },
   {
