--- a/index.ipynb
+++ b/index.ipynb
@@ -388,10 +388,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values1 = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [y_values1], 'text': [text_values]}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}\n",
-    "\n"
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
+    ", 'text': [text_values]}"
    ]
   },
   {
