--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,7 @@
    "source": [
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
-    ", 'text': [text_values]}"
+    ", 'text': []}"
    ]
   },
   {
