--- a/index.ipynb
+++ b/index.ipynb
@@ -389,8 +389,7 @@
    "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
-    ", 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}}"
    ]
   },
   {
