--- a/index.ipynb
+++ b/index.ipynb
@@ -397,8 +397,8 @@
     }
    ],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [4758,2731571,3194], 'text': [text_values]}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': [4758,2731571,3194], 'text': [text_values]}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x':x_values], 'y': [y_values], 'text': [text_values]}}\n",
     "\n",
     "\n"
    ]
