--- a/index.ipynb
+++ b/index.ipynb
@@ -384,21 +384,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-50-314b04487f00>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-50-314b04487f00>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}}\u001b[0m\n\u001b[0m                                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': [4758,2731571,3194], 'text': text_values}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': [text_values]}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}\n",
     "\n",
     "\n"
    ]
@@ -412,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -421,54 +412,50 @@
        "data": [
         {
          "text": [
-          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "c36d7a68-e3a5-11e8-9d73-0242ac110009",
+         "uid": "7bbc440e-e3a7-11e8-9d73-0242ac110009",
          "x": [
-          [
-           "Buenos Aires",
-           "Toronto",
-           "Pyeongchang"
-          ]
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "y": [
-          [
-           2891000,
-           2800000,
-           2581000
-          ]
+          2891000,
+          2800000,
+          2581000
          ]
         },
         {
          "text": [
-          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "c36d8102-e3a5-11e8-9d73-0242ac110009",
+         "uid": "7bbc479c-e3a7-11e8-9d73-0242ac110009",
          "x": [
-          [
-           "Buenos Aires",
-           "Toronto",
-           "Pyeongchang"
-          ]
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "y": [
-          [
-           4758,
-           2731571,
-           3194
-          ]
+          4758,
+          2731571,
+          3194
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"10cbdb54-750c-4a6b-ae0b-536779c5f87e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"10cbdb54-750c-4a6b-ae0b-536779c5f87e\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"c37be594-e3a5-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"c37be814-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3538829a-aa27-4e39-94d2-ae35d393c88c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3538829a-aa27-4e39-94d2-ae35d393c88c\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"7bcb0f7a-e3a7-11e8-9d73-0242ac110009\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"7bcb1308-e3a7-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"10cbdb54-750c-4a6b-ae0b-536779c5f87e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"10cbdb54-750c-4a6b-ae0b-536779c5f87e\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"bar\", \"uid\": \"c37be594-e3a5-11e8-9d73-0242ac110009\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[4758, 2731571, 3194]], \"type\": \"bar\", \"uid\": \"c37be814-e3a5-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3538829a-aa27-4e39-94d2-ae35d393c88c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3538829a-aa27-4e39-94d2-ae35d393c88c\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"7bcb0f7a-e3a7-11e8-9d73-0242ac110009\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"7bcb1308-e3a7-11e8-9d73-0242ac110009\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
